--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -66,8 +66,8 @@ permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 3
+    gaps_out = 5
 
     border_size = 2
 
@@ -87,11 +87,11 @@ general {
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
     rounding = 10
-    rounding_power = 2
+    rounding_power = 4
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    active_opacity = 0.95
+    inactive_opacity = 0.85
 
     shadow {
         enabled = true
@@ -215,4 +215,6 @@ device {
     sensitivity = -0.5
 }
 
-
+xwayland { 
+    force_zero_scaling = true
+}
